--- a/app/app/MainWindow.xaml
+++ b/app/app/MainWindow.xaml
@@ -3,10 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:h="clr-namespace:HelixToolkit.Wpf;assembly=HelixToolkit.Wpf"
         xmlns:local="clr-namespace:app"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Visualizer" Height="768" Width="1024" MinHeight="400" WindowStartupLocation="CenterScreen">
     <Grid>
-        
+        <h:HelixViewport3D x:Name="viewport" ZoomExtentsWhenLoaded="True" ShowCoordinateSystem="True" InfiniteSpin="True" Height="Auto" MouseDown="viewport_MouseDown">
+            <h:SunLight Brightness="1"/>
+            <ModelVisual3D x:Name="grid"/>
+            <ModelVisual3D x:Name="points"/>
+        </h:HelixViewport3D>
     </Grid>
 </Window>
