--- a/app/app/MainWindow.xaml
+++ b/app/app/MainWindow.xaml
@@ -3,15 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:h="clr-namespace:HelixToolkit.Wpf;assembly=HelixToolkit.Wpf"
+         xmlns:HelixToolkit="clr-namespace:HelixToolkit.Wpf;assembly=HelixToolkit.Wpf"
         xmlns:local="clr-namespace:app"
         mc:Ignorable="d"
         Title="Visualizer" Height="768" Width="1024" MinHeight="400" WindowStartupLocation="CenterScreen">
     <Grid>
-        <h:HelixViewport3D x:Name="viewport" ZoomExtentsWhenLoaded="True" ShowCoordinateSystem="True" InfiniteSpin="True" Height="Auto" MouseDown="viewport_MouseDown">
-            <h:SunLight Brightness="1"/>
+        <HelixToolkit:HelixViewport3D x:Name="viewport"  DataContext="Child"  ZoomExtentsWhenLoaded="True" ShowCoordinateSystem="True"   InfiniteSpin="True" MouseDown="viewport_MouseDown" Grid.Row="3" Height="Auto" >
+            
             <ModelVisual3D x:Name="grid"/>
             <ModelVisual3D x:Name="points"/>
-        </h:HelixViewport3D>
+        </HelixToolkit:HelixViewport3D>
     </Grid>
 </Window>
